Fixed Alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -89,6 +89,14 @@ body {
     align-items: center;
 }
 
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 95%;
+}
+
 .c1 {
     font-family: 'Quicksand';
     background-color: #3c43526b;
@@ -96,7 +104,7 @@ body {
     text-wrap: pretty;
     border-radius: 0.6rem;
     padding: 1rem;
-    width: 96vw;
+    width: 100%;
     backdrop-filter: blur(5px);
     min-height: 15rem;
     height: 100%;
@@ -110,14 +118,14 @@ body {
 }
 
 .c2 {
-    margin: 1rem;
+    margin: 1rem 0 1rem 0;
     font-family: 'Quicksand';
     background-color: #3c43526b;
     color: white;
     text-wrap: pretty;
     border-radius: 0.6rem;
     padding: 1rem;
-    width: 96vw;
+    width: 100%;
     backdrop-filter: blur(5px);
     min-height: 18rem;
     height: 100%;
@@ -140,7 +148,6 @@ body {
 }
 
 .footer-card {
-    margin: 1.7vw 0.85vw 1.7vw 0.85vw;
     margin-top: 0;
     height: 10rem;
     width: 30vw;
